unpackaged/main/default/objects/Referencia_familiar__c/Referencia_familiar__c.object-meta.xml
<CustomObject>
    <label>Referencia Familiar</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referencias Familiares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>