unpackaged/main/default/objects/Referencia_familiar__c/fields/Apellido_Materno__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Materno__c</fullName>
    <label>Apellido Materno</label>
    <length>30</length>
    <type>Text</type>
</CustomField>