unpackaged/main/default/objects/Referencia_familiar__c/fields/Apellido_Paterno__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Paterno__c</fullName>
    <label>Apellido Paterno</label>
    <length>30</length>
    <type>Text</type>
</CustomField>