unpackaged/main/default/objects/Referencia_familiar__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Referencias Familiares</relationshipLabel>
    <relationshipName>Referencias_Familiares</relationshipName>
    <type>Lookup</type>
</CustomField>