unpackaged/main/default/objects/Referencia_familiar__c/fields/Correo_electrenico_1__c.field-meta.xml
<CustomField>
    <fullName>Correo_electrenico_1__c</fullName>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>