unpackaged/main/default/objects/Referencia_familiar__c/fields/Correo_electronico_3__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico_3__c</fullName>
    <label>Correo electrónico 3</label>
    <type>Email</type>
</CustomField>