unpackaged/main/default/objects/Referencia_familiar__c/fields/Dictaminacion__c.field-meta.xml
<CustomField>
    <fullName>Dictaminacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dictaminación</label>
    <referenceTo>Dictaminacion__c</referenceTo>
    <relationshipLabel>Referencias Familiares</relationshipLabel>
    <relationshipName>Referencias_Familiares</relationshipName>
    <type>Lookup</type>
</CustomField>