unpackaged/main/default/objects/Referencia_familiar__c/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <label>Nombre</label>
    <length>30</length>
    <type>Text</type>
</CustomField>