unpackaged/main/default/objects/Referencia_familiar__c/fields/Nombre_del_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Cliente__c</fullName>
    <formula>Dictaminacion__r.Nombre_Completo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del Cliente</label>
    <type>Text</type>
</CustomField>