unpackaged/main/default/objects/Referencia_familiar__c/fields/Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Proceso_de_Venta__c</fullName>
    <formula>Dictaminacion__r.Oportunidad__r.Numero_Proceso_de_Venta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proceso</label>
    <type>Text</type>
</CustomField>