unpackaged/main/default/objects/Referencia_familiar__c/fields/Referencia__c.field-meta.xml
<CustomField>
    <fullName>Referencia__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Referencia_familiar__c/&quot; &amp; Id &amp; &quot;/view&quot;,Name &amp; &quot; - &quot; &amp;  Nombre__c &amp; &quot; &quot; &amp; Apellido_Paterno__c &amp; &quot; &quot; &amp; Apellido_Materno__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referencia</label>
    <type>Text</type>
</CustomField>