unpackaged/main/default/objects/Referencia_familiar__c/fields/Telefono_1__c.field-meta.xml
<CustomField>
    <fullName>Telefono_1__c</fullName>
    <label>Teléfono 1</label>
    <type>Phone</type>
</CustomField>