unpackaged/main/default/objects/Referencia_familiar__c/fields/Telefono_3__c.field-meta.xml
<CustomField>
    <fullName>Telefono_3__c</fullName>
    <label>Teléfono 3</label>
    <type>Phone</type>
</CustomField>