unpackaged/main/default/objects/Referencia_familiar__c/validationRules/Valida_modificacion_apellido_paterno.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_modificacion_apellido_paterno</fullName>
    <active>true</active>
    <description>No se puede modificar el campo apellido paterno si el estatus del proceso de venta es de la oportunidad es diferente a Validación, Reservado, Formalizado</description>
    <errorConditionFormula>AND(

ISCHANGED(Apellido_Paterno__c),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Validación&#39;),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Reservado&#39;),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Formalizado&#39;)

)</errorConditionFormula>
    <errorDisplayField>Apellido_Paterno__c</errorDisplayField>
    <errorMessage>No se puede modificar el campo apellido paterno si el estatus del proceso de venta es de la oportunidad es diferente a Validación, Reservado, Formalizado.</errorMessage>
</ValidationRule>