unpackaged/main/default/objects/Referencia_familiar__c/validationRules/Valida_modificacion_telefono_3.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_modificacion_telefono_3</fullName>
    <active>true</active>
    <description>No se puede modificar el campo teléfono 3 si el estatus del proceso de venta es de la oportunidad es diferente a Validación, Reservado, Formalizado</description>
    <errorConditionFormula>AND(

ISCHANGED(Telefono_3__c),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Validación&#39;),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Reservado&#39;),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Formalizado&#39;)

)</errorConditionFormula>
    <errorDisplayField>Telefono_3__c</errorDisplayField>
    <errorMessage>No se puede modificar el campo teléfono 3 si el estatus del proceso de venta es de la oportunidad es diferente a Validación, Reservado, Formalizado.</errorMessage>
</ValidationRule>