unpackaged/main/default/objects/Referencia_familiar__c/validationRules/Valida_notificacion_nombre.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_notificacion_nombre</fullName>
    <active>true</active>
    <description>No se puede modificar el campo nombre si el estatus del proceso de venta es de la oportunidad es diferente a Validación, Reservado, Formalizado</description>
    <errorConditionFormula>AND(

ISCHANGED(Nombre__c),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Validación&#39;),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Reservado&#39;),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Formalizado&#39;)

)</errorConditionFormula>
    <errorDisplayField>Nombre__c</errorDisplayField>
    <errorMessage>No se puede modificar el campo nombre si el estatus del proceso de venta es de la oportunidad es diferente a Validación, Reservado, Formalizado.</errorMessage>
</ValidationRule>