unpackaged/main/default/objects/Referencia_familiar__c/validationRules/Validacion_telefono_dos_solo_numeros.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_telefono_dos_solo_numeros</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT(ISBLANK( Telefono_2__c  )),
OR(
NOT(IF(LEFT(Telefono_2__c,3) =&#39;+52&#39;,true, IF(LEFT(Telefono_2__c,2) =&#39;+1&#39;, true,false))),
RIGHT(Telefono_2__c , 10) == &#39;1111111111&#39;,
RIGHT(Telefono_2__c , 10) == &#39;2222222222&#39;,
RIGHT(Telefono_2__c , 10) == &#39;3333333333&#39;,
RIGHT(Telefono_2__c , 10) == &#39;4444444444&#39;,
RIGHT(Telefono_2__c , 10) == &#39;5555555555&#39;,
RIGHT(Telefono_2__c , 10) == &#39;6666666666&#39;,
RIGHT(Telefono_2__c , 10) == &#39;7777777777&#39;,
RIGHT(Telefono_2__c , 10) == &#39;8888888888&#39;,
RIGHT(Telefono_2__c , 10) == &#39;9999999999&#39;,
RIGHT(Telefono_2__c , 10) == &#39;0000000000&#39;,
IF(LEFT(Telefono_2__c,3) =&#39;+52&#39;,LEN(Telefono_2__c)&lt;&gt;13, IF(LEFT(Telefono_2__c,2) =&#39;+1&#39;, LEN(Telefono_2__c)&lt;&gt;12,true)),
IF(LEFT(Telefono_2__c,3) =&#39;+52&#39;,NOT(REGEX(RIGHT(Telefono_2__c , 12), &quot;^[0-9]*$&quot;)), IF(LEFT(Telefono_2__c,2) =&#39;+1&#39;, NOT(REGEX(RIGHT(Telefono_2__c , 11), &quot;^[0-9]*$&quot;)),true))
),
false
)</errorConditionFormula>
    <errorDisplayField>Telefono_2__c</errorDisplayField>
    <errorMessage>Solo se permite el formato +52 y 10 dígitos sin que todos los números sean el mismo dígito</errorMessage>
</ValidationRule>